<resources>
    <string name="app_name">Pop Movies</string>

    <string name="error_message">
        There was a problem with the internet connection, please try again.
    </string>
    <string name="response_error_message">
        There was a problem with the downloading content. Code:
    </string>
    <string name="no_favorites_data">
        There is no saved movies in database.
    </string>

    <string name="nav_popular_title">Popular</string>
    <string name="nav_top_rated_title">Top Rated</string>
    <string name="nav_favorite_title">Favorite</string>

    <string name="overview_fragment_title">Overview</string>
    <string name="trailers_fragment_title">Trailers</string>
    <string name="review_fragment_title">Reviews</string>

    <string name="poster_image">Poster Image</string>

    <string name="description_movie_poster">Contains poster of movie</string>
    <string name="description_movie_backdrop">Contains backdrop of movie</string>
    <string name="description_favorite_button">Favorite button</string>
    <string name="description_trailer">Play trailer</string>
    <string name="heading_release_date">Release Date</string>
    <string name="example_release_date">08–31–2015</string>
    <string name="heading_vote_average">Vote Average</string>
    <string name="example_vote_average">8.2/10</string>
    <string name="example_original_title">Vikings</string>
    <string name="example_overview">Vikings...</string>
    <string name="overview_title">Overview</string>

    <string name="removed_from_favorites">Movie removed from Favorites</string>
    <string name="added_to_favorites">Movie added as Favorites</string>

    <string name="most_popular_subtitle">Most Popular</string>
    <string name="top_rated_subtitle">Top Rated</string>
    <string name="favorites_subtitle">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
